--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -14,6 +14,7 @@
     padding: 0;
     display: flex;
     flex-direction: row;
+    column-gap: 8px;
     align-items: center;
     list-style-type: none;
 }
