--- a/src/components/ingredient/ingredient.module.css
+++ b/src/components/ingredient/ingredient.module.css
@@ -7,8 +7,9 @@
     align-items: center;
 }
 
-.icon {
-    vertical-align: middle;
+.price {
+    display: flex;
+    column-gap: 8px;
 }
 
 .title {
