--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -1,9 +1,13 @@
 .modal {
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     box-sizing: border-box;
     width: 720px;
     background: #1C1C21;
     border-radius: 40px;
+    z-index: 2;
 }
 
 .button {
